--- a/app/src/main/res/layout/activity_registro_ticket.xml
+++ b/app/src/main/res/layout/activity_registro_ticket.xml
@@ -7,4 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".Controllers.RegistroTicket">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="107dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher_background" />
 </androidx.constraintlayout.widget.ConstraintLayout>
