implemte depencia y diseño a lista ticket

--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -8,7 +8,7 @@
     tools:context=".Controllers.Principal">
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/idLista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="168dp"
