--- a/app/src/main/res/layout/activity_lista_ticket.xml
+++ b/app/src/main/res/layout/activity_lista_ticket.xml
@@ -7,4 +7,26 @@
     android:layout_height="match_parent"
     tools:context=".Controllers.lista_Ticket">
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="63dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="636dp"
+        android:text="Lista de los Tickets"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="115dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
